# SpaceMissionPlanner

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  configure.py  pom.xml  pyproject.toml  requirements.txt
agent/: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  FILE_FORMAT.md  JAVA_REWRITE_PLAN.md  MISSION_SCHEMA.md  ROADMAP.md  UI_DESIGN.md  VIEWER_PLAN.md  current_status.md
cmake/: ConfigureSettings.cmake  FindCSPICE.cmake  GatherSymbols.cmake
cpp/: CMakeLists.txt
cpp/astro/: CMakeLists.txt
cpp/astro/two_body/: CMakeLists.txt
cpp/astro/two_body/include/: orbital_elements.hh  propagator.hh
cpp/astro/two_body/src/: orbital_elements.cpp  propagator.cpp
cpp/astro/two_body/test/: test_orbital_elements.cpp  test_propagator.cpp
cpp/bindings/: CMakeLists.txt
cpp/bindings/python/: CMakeLists.txt  bindings.cpp
cpp/core/: CMakeLists.txt
cpp/core/frames/: CMakeLists.txt
cpp/core/frames/include/: frame.hh  transforms.hh
cpp/core/frames/src/: transforms.cpp
cpp/core/frames/test/: test_frame.cpp  test_transforms.cpp
cpp/core/include/: core.hh  units.hh
cpp/core/state/: CMakeLists.txt
cpp/core/state/include/: state_vector.hh
cpp/core/state/test/: test_state_vector.cpp
cpp/core/time/: CMakeLists.txt
cpp/core/time/include/: epoch.hh
cpp/core/time/test/: test_epoch.cpp
cpp/mission_graph/: CMakeLists.txt
cpp/mission_graph/include/: edge.hh  graph.hh  node.hh  propagator_node.hh
cpp/mission_graph/src/: edge.cpp  graph.cpp  propagator_node.cpp
cpp/mission_graph/test/: test_graph.cpp
cpp/optimization/: CMakeLists.txt
cpp/optimization/include/: constraint.hh  gradient_descent.hh  objective.hh  parameter.hh
cpp/optimization/src/: gradient_descent.cpp
cpp/optimization/test/: test_optimizer.cpp
cpp/spice/: CMakeLists.txt
cpp/spice/include/: ephemeris.hh
cpp/spice/src/: ephemeris.cpp
examples/viewer/: mission.json  sample_trajectory.json
planner/: README.md  build.sh  planner.py  start.sh
planner/01-jeod-bindings/: CMakeLists.txt  Makefile  README.md  pyjeod.cc  pyjeodConfig.cmake.in
planner/02-kernels/: README.md  download.py  planner.tm
planner/03-backend/: README.md  requirements.txt
planner/03-backend/api/: jeod_engine.py  server.py
planner/03-backend/trajectory/: lambert.py  shooting.py
planner/04-frontend/: README.md  package-lock.json  package.json  tsconfig.json
planner/04-frontend/public/: index.html
planner/04-frontend/src/: App.tsx
python/: CMakeLists.txt
python/spacemissionplanner/: __init__.py
python/spacemissionplanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/spacemissionplanner/gui/: __init__.py  __main__.py  app.py  main_window.py  mission_graph_page.py  solar_viewer_page.py  vtk_platform.py
python/spacemissionplanner/mission/: __init__.py  clocks.py  compile.py  io.py  model.py  templates.py
python/spacemissionplanner/mission_graph/: __init__.py  execution.py  serialization.py  templates.py
python/spacemissionplanner/visualization/: __init__.py  converter.py  demo_ephemeris.py  ephemeris.py  episode_io.py  mission_graph_io.py  scene.py  solar_system_view.py  trajectory_generator.py  viewer_data.py
python/spacemissionplanner/wrappers/: __init__.py  backend.py
python/tests/: test_ephemeris.py  test_episode_io.py  test_gui_platform.py  test_imports.py  test_mission_graph_execution.py  test_mission_graph_serialization.py  test_mission_phase_h.py  test_trajectory_scene.py  test_viewer_episode.py
src/main/java/com/spacemissionplanner/: Main.java
src/main/java/com/spacemissionplanner/model/: CelestialBody.java  Coast.java  Maneuver.java  MissionEvent.java  Vehicle.java  Waypoint.java
src/main/java/com/spacemissionplanner/physics/: OrekitService.java
src/main/java/com/spacemissionplanner/ui/: MainController.java  Viewer2D.java  Viewer3D.java
src/main/java/com/spacemissionplanner/util/: ErrorHandler.java
src/main/resources/com/spacemissionplanner/ui/: main.fxml
src/test/java/com/spacemissionplanner/model/: VehicleTest.java  WaypointTest.java
src/test/java/com/spacemissionplanner/physics/: OrekitServiceTest.java
