[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacemissionplanner"
version = "0.1.0"
description = "Python frontend: notebooks, wrappers, visualization, and GUI for SpaceMissionPlanner"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
viz = ["pyvista>=0.43", "pyvistaqt>=0.11"]
dev = ["pytest>=7.4"]

[project.scripts]
smp-gui = "spacemissionplanner.gui.app:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]
